<resources>
    <string name="app_name">Vista Movil APP</string>
    <string name="vista_movil_app">Vista Movil App</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="paciente">Paciente</string>
    <string name="generar_cita">Generar cita</string>
    <string name="nueva_receta">Nueva Receta</string>
    <string name="archivo">Archivo</string>
    <string name="cotizaciones">Cotizaciones</string>
    <string name="productos">Productos</string>
    <string name="salir">Salir</string>
    <string name="laboratorio_y_optica_vista">Laboratorio Y Optica Vista</string>
    <string name="suculsal_8va_av_sur">Sucursal 8va Av Sur</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="archivopaciente">ArchivoPaciente</string>
    <string name="pacienteimage">Paciente</string>
    <string name="agregar_paciente">Agregar Paciente</string>
</resources>