<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.my.first.vistamovilapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.my.first.vistamovilapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.my.first.vistamovilapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/menuClienteFragment"
        android:name="com.my.first.vistamovilapp.MenuClienteFragment"
        android:label="fragment_menu_cliente"
        tools:layout="@layout/fragment_menu_cliente" />
    <fragment
        android:id="@+id/cotizacion"
        android:name="com.my.first.vistamovilapp.Cotizacion"
        android:label="fragment_cotizacion"
        tools:layout="@layout/fragment_cotizacion" />
</navigation>